add comments to stripped index

--- a/index-stripped.html
+++ b/index-stripped.html
@@ -1,14 +1,17 @@
 <!-- Be aware, comments be here -->
 
 <!doctype html>
+<!-- The DOCTYPE of your page helps your browser determine what kind of standards to see your webpage as, it's always important to declare it! -->
+
 <html lang="en">
   
   <head>
-    
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Hello, world!</title>
   </head>
+<!-- This is the head of your document, where metatags exist to provide data about your website. These three tags are a few for example: Charset declares what text encoding should be used, Viewport determines how the size of your website should look, and title is, well, the title of your website, which is important! You should always name your websites. -->
+
 
   <!-- The body tag describes the section that'll be originally visible in your HTML document -->
   <body>
@@ -49,6 +52,7 @@
 
   <style>
 </style>
+<!-- This is a stylesheet, this is where we'll begin making our website look cool. -->
 
 
 </html>
